--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 *.xml
+*.pdf
+
 
 # User-specific stuff
 .idea/**/workspace.xml
